--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.muflone.android.django_hotels.activities.ActivityMain">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/actionSettings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_about"
+        android:id="@+id/actionAbout"
         android:orderInCategory="999"
         android:title="@string/action_about"
         app:showAsAction="never" />
