Added preferences section

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#3C3838</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#F5F5F5</color>
+    <color name="colorAccent">#3D3D3D</color>
 </resources>
