--- a/app/src/main/res/values/messages.xml
+++ b/app/src/main/res/values/messages.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="message_missing_tablet_id">Missing Tablet ID, please set it in the settings before the use</string>
     <string name="message_missing_tablet_key">Missing Tablet key, please set it in the settings before the use</string>
+    <string name="message_unmatching_date_time">The date or the system time is not matching, please check system settings</string>
 </resources>
