--- a/app/src/main/res/values/messages.xml
+++ b/app/src/main/res/values/messages.xml
@@ -5,4 +5,5 @@
     <string name="message_unmatching_date_time">The date or the system time is not matching, please check system settings</string>
     <string name="message_no_server_connection">Unable to establish connection with the server</string>
     <string name="message_unable_to_download">Unable to download data from the server</string>
+    <string name="message_invalid_server_response">Incomplete reseponse from the server (the internet connection could be bad)</string>
 </resources>
