--- a/app/src/main/res/values/messages.xml
+++ b/app/src/main/res/values/messages.xml
@@ -2,8 +2,8 @@
 <resources>
     <string name="message_missing_tablet_id">Missing Tablet ID, please set it in the settings before the use</string>
     <string name="message_missing_tablet_key">Missing Tablet key, please set it in the settings before the use</string>
+    <string name="message_no_server_connection">Unable to establish connection with the server, please check your internet connection</string>
     <string name="message_invalid_date_time">Invalid date or time, please check system settings</string>
-    <string name="message_no_server_connection">Unable to establish connection with the server</string>
     <string name="message_unable_to_download">Unable to download data from the server</string>
     <string name="message_invalid_server_response">Invalid response from the server, please check your internet connection</string>
 </resources>
