--- a/app/src/main/res/values/messages.xml
+++ b/app/src/main/res/values/messages.xml
@@ -6,4 +6,5 @@
     <string name="message_invalid_date_time">Invalid date or time, please check system settings</string>
     <string name="message_unable_to_download">Unable to download data from the server</string>
     <string name="message_invalid_server_response">Invalid response from the server, please check your internet connection</string>
+    <string name="message_established_connection">Established connection with the server</string>
 </resources>
