--- a/app/src/main/res/layout/structures_fragment.xml
+++ b/app/src/main/res/layout/structures_fragment.xml
@@ -15,120 +15,102 @@
         app:layout_constraintTop_toTopOf="parent"
         app:tabGravity="fill"
         app:tabMaxWidth="0dp"
-        app:tabMode="fixed">
+        app:tabMode="scrollable">
 
         <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Structure 1" />
 
         <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="Structure 2" />
-    </android.support.design.widget.TabLayout>
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/buildingsLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/structuresLayout"
-        app:tabGravity="fill"
-        app:tabMaxWidth="0dp"
-        app:tabMode="fixed">
-
-        <android.support.design.widget.TabItem
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="Building 1" />
-
-        <android.support.design.widget.TabItem
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:text="Building 2" />
 
     </android.support.design.widget.TabLayout>
 
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/structuresLayout"
-        app:layout_constraintEnd_toStartOf="@+id/structuresLayout"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <TableLayout
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:orientation="horizontal"
+        android:baselineAligned="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buildingsLayout">
+        app:layout_constraintTop_toBottomOf="@+id/structuresLayout">
 
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="visible">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="30"
+            android:orientation="vertical">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="3"
+                android:text="@string/employees"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+
+            <ListView
+                android:id="@+id/employeesView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/color_employees_background"
+                android:choiceMode="singleChoice"
+                android:listSelector="@color/color_employees_selected">
+
+            </ListView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="30"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/buildings"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+
+            <ListView
+                android:id="@+id/buildingsView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/color_buildings_background"
+                android:choiceMode="singleChoice"
+                android:listSelector="@color/color_buildings_selected">
+
+            </ListView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="30"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:text="@string/rooms"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
-            <View
-                android:layout_width="3px"
-                android:layout_height="1sp"
-                android:layout_weight="0.1"
-                android:background="@android:color/holo_red_dark" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/employees"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
             <ListView
                 android:id="@+id/roomsView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:background="@color/colorSnackbarTextColor1"
-                android:choiceMode="multipleChoice"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/color_rooms_background"
+                android:choiceMode="singleChoice"
+                android:listSelector="@color/color_rooms_selected"
                 tools:layout_editor_absoluteY="95dp">
 
             </ListView>
 
-            <View
-                android:layout_width="3px"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.1"
-                android:background="@android:color/holo_red_dark" />
-
-            <ListView
-                android:id="@+id/employeesView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@color/colorSnackbarTextColor2">
-
-            </ListView>
-
-        </TableRow>
-
-    </TableLayout>
+        </LinearLayout>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
