--- a/app/src/main/res/layout/structures_fragment.xml
+++ b/app/src/main/res/layout/structures_fragment.xml
@@ -71,6 +71,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <TextView
+                    android:id="@+id/employeeLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/employee"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
                 <ImageView
                     android:id="@+id/genderImageView"
                     android:layout_width="48dp"
@@ -91,7 +101,7 @@
                     android:text="@string/first_name_label"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                     app:layout_constraintStart_toEndOf="@+id/genderImageView"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@+id/employeeLabel" />
 
                 <TextView
                     android:id="@+id/firstNameView"
